Personnalisation des informations personnelles

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,11 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Amaury Semery
+avatar: /static/images/avatar.jpg
+occupation: Développeur backend
+company: Ouvert aux opportunités
+email: amaury.semery@gmail.com
+linkedin: https://www.linkedin.com/in/amaury-semery-a14a12b6/
+github: https://github.com/AmaurySemery
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
