Ajout du description du profil perso

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,8 +8,8 @@ linkedin: https://www.linkedin.com/in/amaury-semery-a14a12b6/
 github: https://github.com/AmaurySemery
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Issu d'un master en histoire, j'ai réalisé une reconversion professionnelle après un bootcamp m'ayant vu aboutir sur une expérience de plus de trois ans en tant que développeur backend. 
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+Initialement formé au domaine de l'IoT avec une forte appétence pour python, je me suis progressivement orienté vers le développement applicatif avec Node.js, JavaScript, TypeScript, et plus.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Aujourd'hui, je continue de me former en continu et profite de ce blog pour partager mes connaissances acquises dans l'ambition de devenir un développeur FullStack.
